ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: jku-cloud-computing
spec:
  rules:
  - host: map-api.projectselene.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: martin-service
            port:
              number: 80
  - host: map.projectselene.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
